CSS/restartstyle.css
@import url(http://fonts.googleapis.com/css?family=Montserrat);

* {
    font-family: 'Montserrat', sans-serif;
}
#container {
    position: relative;
    resize: both;
    border: 1px solid #aaaaaa;
    float: left;
    margin-top: 10px;
    height: 800px;
    overflow-x: scroll;
    overflow-y: scroll;
    background-image: url("../Images/grid.png") ;
    background-repeat: repeat;
}

/*
    Toolbox Elements
*/

.stream, .wstream ,.squery, .filter,.wquery,.joquery,.stquery{
    border-radius: 0.5em;
    opacity: 0.8;
    width: 120px;
    height: 80px;
    line-height: 80px;
    cursor: pointer;
    text-align: center;
    z-index: 20;
    /*position: absolute;*/
    background-color: transparent;
    background-size: 120px 72px;
    background-repeat: no-repeat;
    color: black;
    font-family: helvetica, sans-serif;
    /*padding: 0.5em;*/
    font-size: 0.9em;
    -webkit-transition: -webkit-box-shadow 0.15s ease-in;
    -moz-transition: -moz-box-shadow 0.15s ease-in;
    -o-transition: -o-box-shadow 0.15s ease-in;
    transition: box-shadow 0.15s ease-in;
}
.stream{
    background-image: url("../Images/stream.png") ;
}

.wstream {
    background-image: url("../Images/windowStream.png");
}

.squery {
    background-image: url("../Images/Passthrough.png");

}

.filter {
    background-image: url("../Images/filter.png");
}

.wquery {
    background-image: url("../Images/window1.png");

}
.joquery {
    background-image: url("../Images/join.png");

}
.stquery {
    background-image: url("../Images/statemachine.png");
}
/*
    Grouping Element
*/

.partition {
    border: 1px solid #346789;
    resize: both;
    box-shadow: 2px 2px 19px #aaa;
    -o-box-shadow: 2px 2px 19px #aaa;
    -webkit-box-shadow: 2px 2px 19px #aaa;
    -moz-box-shadow: 2px 2px 19px #aaa;
    -moz-border-radius: 0.5em;
    border-radius: 0.5em;
    opacity: 0.8;
    width: 120px;
    height: 72px;
    line-height: 80px;
    cursor: pointer;
    text-align: center;
    z-index: 20;
    /*position: absolute;*/
    background-color: transparent;
    color: black;
    font-family: helvetica, sans-serif;
    padding: 0.5em;
    font-size: 0.9em;
    -webkit-transition: -webkit-box-shadow 0.15s ease-in;
    -moz-transition: -moz-box-shadow 0.15s ease-in;
    -o-transition: -o-box-shadow 0.15s ease-in;
    transition: box-shadow 0.15s ease-in;
}

/*
    Dropped Elements corresponding to their toolbox elements
*/

.streamdrop, .wstreamdrop ,.squerydrop, .filterdrop, .wquerydrop, .joquerydrop, .stquerydrop {
    border-radius: 0.5em;
    opacity: 0.8;
    width: 120px;
    height: 80px;
    line-height: 80px;
    cursor: pointer;
    text-align: center;
    z-index: 20;
    position: absolute;
    background-color: transparent;
    background-size: 120px 80px;
    background-repeat: no-repeat;
    color: black;
    font-family: helvetica, sans-serif;
    padding: 0.5em;
    font-size: 0.9em;
    -webkit-transition: -webkit-box-shadow 0.15s ease-in;
    -moz-transition: -moz-box-shadow 0.15s ease-in;
    -o-transition: -o-box-shadow 0.15s ease-in;
    transition: box-shadow 0.15s ease-in;
}

.streamdrop{
    background-image: url("../Images/stream.png") ;
}
.wstreamdrop {
    background-image: url("../Images/windowStream.png");
}

.squerydrop {
    background-image: url("../Images/Passthrough.png");
}

.filterdrop {
    background-image: url("../Images/filter.png");
}

.wquerydrop {
    background-image: url("../Images/window1.png");
}

.joquerydrop {
    background-image: url("../Images/join.png");
}

.stquerydrop {
    background-image: url("../Images/statemachine.png");
}

/*
    Dropped Grouping Element
*/

.partitiondrop {
    border: 1px solid #346789;
    resize: both;
    overflow-x: hidden;
    overflow-y: hidden;
    box-shadow: 2px 2px 19px #aaa;
    -o-box-shadow: 2px 2px 19px #aaa;
    -webkit-box-shadow: 2px 2px 19px #aaa;
    -moz-box-shadow: 2px 2px 19px #aaa;
    -moz-border-radius: 0.5em;
    border-radius: 0.5em;
    opacity: 0.8;
    width: 120px;
    height: 72px;
    line-height: 80px;
    cursor: move;
    text-align: center;
    z-index: 1;
    position: absolute;
    background-color: transparent;
    color: black;
    font-family: helvetica, sans-serif;
    padding: 0.5em;
    font-size: 0.9em;
    -webkit-transition: -webkit-box-shadow 0.15s ease-in;
    -moz-transition: -moz-box-shadow 0.15s ease-in;
    -o-transition: -o-box-shadow 0.15s ease-in;
    transition: box-shadow 0.15s ease-in;
    box-sizing: border-box;
}

/*
    Element Divisions added as clases when the element is appended
*/

.task {
    font-size: 12px;
    text-align: right;
    font-weight: 200;
    border: 1px solid black;
    background-color: #ddddff;
}

.title {
    padding: 10px;
    cursor: move;
}
.connection {
    -moz-border-radius: 50px;
    -webkit-border-radius: 50px;
    border-radius: 50px;
    font-size:10px;
    text-align: center;
    cursor: pointer;
    width: 10px;
    height: 10px;
    margin-left: -10px;
    margin-top: 80px;
    border: 1px solid darkblue;
    background-color: white;
}

.pro:hover {
    box-shadow: 2px 2px 19px #444;
    -o-box-shadow: 2px 2px 19px #444;
    -webkit-box-shadow: 2px 2px 19px #444;
    -moz-box-shadow: 2px 2px 19px #444;
    opacity:0.6;
    filter:alpha(opacity=60);
}


.propertyBox {
    float: right;
    width: 150px;
    background-color: lightgrey;
    height: 650px;
}
.property {
    float: left;
    margin-top: 10px;
    background: #f4f4f4;
    border: 1px solid #aaaaaa;
}
.jsplumb-connector {
    z-index: 4;
    padding: 50px;

}
.jsplumb-endpoint, .endpointTargetLabel, .endpointSourceLabel {
    z-index: 21;
    cursor: pointer;
}

.aLabel {
    background-color: white;
    padding: 0.4em;
    font: 12px sans-serif;
    color: #444;
    z-index: 21;
    border: 1px dotted gray;
    opacity: 0.8;
    cursor: pointer;
}

/*
*Styles for the configuration icons
*/
.element-prop-icon , .element-conn-icon , .element-close-icon{
    float:right;
    width:26px;
    height:26px;
    background-color: transparent;
    border: 1px solid transparent;
    margin-top:-95px;
    cursor:pointer;
    color: red;
    border-radius: 40px;
}

.element-prop-icon{
    margin-right:50px;
}
.element-conn-icon{
    margin-right:25px;
}
.element-close-icon{
    margin-right:0;
}

